--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "buildCommand": "npm install -g vite && npm run build",
+        "buildCommand": "npx vite build",
         "outputDirectory": "dist"
       }
     }
