--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "framework": "vite",
-  "buildCommand": "npm run build",
+  "buildCommand": false,
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
   "outputDirectory": "dist",
   "rewrites": [
     {
