fix: update build process and clean up imports

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "clean": "rm -rf dist node_modules",
+    "build": "npm run clean && npm install && vite build",
     "postinstall": "chmod +x ./node_modules/.bin/vite",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
