fix: update security headers and CSP configuration

--- a/vercel.json
+++ b/vercel.json
@@ -7,20 +7,34 @@
       "headers": {
         "content-type": "application/json",
         "access-control-allow-origin": "*",
-        "cache-control": "no-cache"
+        "cache-control": "no-cache",
+        "content-security-policy": "default-src 'self' https: data: 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https: wss: data:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' https: data: blob:; frame-src 'self' https: ton: tonhub:",
+        "x-content-type-options": "nosniff",
+        "x-frame-options": "SAMEORIGIN"
       }
     },
     {
       "src": "^/assets/(.*)",
-      "dest": "/assets/$1"
+      "dest": "/assets/$1",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
     },
     {
       "src": "^/static/(.*)",
-      "dest": "/static/$1"
+      "dest": "/static/$1",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/index.html",
+      "headers": {
+        "content-security-policy": "default-src 'self' https: data: 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https: wss: data:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' https: data: blob:; frame-src 'self' https: ton: tonhub:",
+        "x-content-type-options": "nosniff",
+        "x-frame-options": "SAMEORIGIN"
+      }
     }
   ],
   "builds": [
