fix: update security configuration and static file handling

--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,7 @@
       "headers": {
         "content-type": "application/json",
         "access-control-allow-origin": "*",
-        "cache-control": "no-cache",
-        "content-security-policy": "default-src 'self' https: data: 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https: wss: data:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' https: data: blob:; frame-src 'self' https: ton: tonhub:",
-        "x-content-type-options": "nosniff",
-        "x-frame-options": "SAMEORIGIN"
+        "cache-control": "no-cache"
       }
     },
     {
@@ -28,13 +25,11 @@
       }
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/index.html",
-      "headers": {
-        "content-security-policy": "default-src 'self' https: data: 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https: wss: data:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' https: data: blob:; frame-src 'self' https: ton: tonhub:",
-        "x-content-type-options": "nosniff",
-        "x-frame-options": "SAMEORIGIN"
-      }
+      "dest": "/index.html"
     }
   ],
   "builds": [
