--- a/vercel.json
+++ b/vercel.json
@@ -11,25 +11,25 @@
       }
     },
     {
-      "src": "^/assets/(.*)",
-      "dest": "/assets/$1",
+      "src": "^/static/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
-      }
+      },
+      "continue": true
     },
     {
-      "src": "^/static/(.*)",
-      "dest": "/static/$1",
+      "src": "^/assets/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
-      }
+      },
+      "continue": true
     },
     {
       "handle": "filesystem"
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/"
     }
   ],
   "builds": [
@@ -37,7 +37,8 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "buildCommand": "npm run build"
       }
     }
   ]
